# motdyn

./: .editorconfig  .gitignore  .justfile  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  docker.yaml  release.yaml
src/: config.rs  installer.rs  main.rs  motd.rs  template.rs
src/motd/: mod.rs  probe.rs  render.rs  tests.rs  types.rs  welcome.rs
