[package]
name = "motdyn"
version = "1.0.8"
edition = "2024"
description = "Dynamic MOTD CLI for Linux login sessions."
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/motdyn"
homepage = "https://github.com/lvillis/motdyn"
documentation = "https://github.com/lvillis/motdyn/blob/main/README.md"
include = [
  "src/**",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE",
]

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock"], optional = true }
colored = { version = "3.1.1", default-features = false, optional = true }
osarg = { version = "0.1.1", default-features = false }
rustix = { version = "1.1.4", default-features = false, features = ["fs", "process"], optional = true }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"], optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
reqx = { version = "0.1.35", default-features = false, features = ["blocking-tls-rustls-ring"], optional = true }
url = { version = "2.5.8", default-features = false, features = ["std"], optional = true }

[features]
default = ["full"]
full = ["template", "color", "config-toml", "system-probes", "login-security", "remote-welcome", "install-hooks"]
slim = ["template"]
template = []
color = ["dep:colored"]
config-toml = ["dep:serde", "dep:toml"]
system-probes = ["dep:rustix"]
login-security = ["dep:chrono", "system-probes"]
remote-welcome = ["dep:reqx", "dep:url", "config-toml"]
install-hooks = []

[dev-dependencies]
tempfile = { version = "3.27.0", default-features = false, features = ["getrandom"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[profile.dev.package."*"]
opt-level = 1

[package.metadata.release]
push = true
publish = false
verify = true
sign-commit = true
sign-tag = true
allow-branch = ["main"]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]
